--- a/BookOrca/View/MainWindow.xaml
+++ b/BookOrca/View/MainWindow.xaml
@@ -8,9 +8,26 @@
                  mc:Ignorable="d"
                  Title="BookOrca"
                  TitleCharacterCasing="Normal"
+                 TitleForeground="Transparent"
                  BorderThickness="0"
-                 Height="720"
-                 Width="1280"
+                 Height="600"
+                 Width="500"
                  d:DataContext="{d:DesignInstance viewModel:MainViewModel}">
-    <Grid />
+    <Window.Resources>
+        <DataTemplate x:Key="BookTemplate" DataType="{x:Type viewModel:BookViewModel}">
+            <Border BorderBrush="Black" BorderThickness="1" Margin="0,0,0,5">
+                <Image Source="{Binding ImagePath}" Width="100" Height="150" />
+            </Border>
+        </DataTemplate>
+    </Window.Resources>
+
+    <Grid>
+        <ItemsControl ItemsSource="{Binding Books}" ItemTemplate="{StaticResource BookTemplate}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+        </ItemsControl>
+    </Grid>
 </mah:MetroWindow>
