--- a/BookOrca/View/MainWindow.xaml
+++ b/BookOrca/View/MainWindow.xaml
@@ -13,21 +13,22 @@
                  Height="600"
                  Width="500"
                  d:DataContext="{d:DesignInstance viewModel:MainViewModel}">
-    <Window.Resources>
-        <DataTemplate x:Key="BookTemplate" DataType="{x:Type viewModel:BookViewModel}">
-            <Border BorderBrush="Black" BorderThickness="1" Margin="0,0,0,5">
-                <Image Source="{Binding ImagePath}" Width="100" Height="150" />
-            </Border>
-        </DataTemplate>
-    </Window.Resources>
-
     <Grid>
-        <ItemsControl ItemsSource="{Binding Books}" ItemTemplate="{StaticResource BookTemplate}">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel />
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-        </ItemsControl>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="70"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="1">
+            <ListView ItemsSource="{Binding Path=BookList}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Border BorderBrush="Black" BorderThickness="1" Margin="0,0,0,5">
+                            <Image Source="{Binding Path=CoverSource}" Width="100" Height="150"/>
+                        </Border>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
     </Grid>
 </mah:MetroWindow>
