--- a/BookOrca/View/MainWindow.xaml
+++ b/BookOrca/View/MainWindow.xaml
@@ -13,6 +13,15 @@
                  Height="600"
                  Width="500"
                  d:DataContext="{d:DesignInstance viewModel:MainViewModel}">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Styles/BookStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
@@ -21,13 +30,25 @@
 
         <Grid Grid.Row="1">
             <ListView ItemsSource="{Binding Path=BookList}">
+                <ListView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel Orientation="Horizontal" />
+                    </ItemsPanelTemplate>
+                </ListView.ItemsPanel>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <Border BorderBrush="Black" BorderThickness="1" Margin="0,0,0,5">
-                            <Image Source="{Binding Path=CoverSource}" Width="100" Height="150"/>
+                        <Border BorderBrush="Black" Background="Transparent" BorderThickness="0" Margin="0 0 0 0">
+                            <Image Source="{Binding Path=CoverSource}" Width="100" Height="150" Stretch="UniformToFill" Style="{StaticResource BookImageStyle}"/>
                         </Border>
                     </DataTemplate>
                 </ListView.ItemTemplate>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="Margin" Value="20 0 20 0"/>
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+                    </Style>
+                </ListView.ItemContainerStyle>
             </ListView>
         </Grid>
     </Grid>
