--- a/BookOrca/View/MainWindow.xaml
+++ b/BookOrca/View/MainWindow.xaml
@@ -5,6 +5,7 @@
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                  xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                  xmlns:viewModel="clr-namespace:BookOrca.ViewModel"
+                 xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                  mc:Ignorable="d"
                  Title="BookOrca"
                  TitleCharacterCasing="Normal"
@@ -27,6 +28,16 @@
             <RowDefinition Height="70"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+        
+        <StackPanel Grid.Row="0"
+                    Orientation="Horizontal">
+            <Button Height="50"
+                    Width="50"
+                    Margin="10"
+                    Click="OpenSettings">
+                <iconPacks:Material Kind="Cog"/>
+            </Button>
+        </StackPanel>
 
         <Grid Grid.Row="1">
             <ListView ItemsSource="{Binding Path=BookList}">
