--- a/BookOrca/App.xaml
+++ b/BookOrca/App.xaml
@@ -1,6 +1,8 @@
 ﻿<Application x:Class="BookOrca.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:bookOrca="clr-namespace:BookOrca"
+             xmlns:converter="clr-namespace:BookOrca.Converter">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -11,6 +13,12 @@
                 <!-- Theme setting -->
                 <ResourceDictionary
                     Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/light.blue.xaml" />
+
+                <ResourceDictionary>
+                    <converter:StringEmptyToVisibility x:Key="EmptyToVis"/>
+                    <!-- <converter:AccountToVisibility x:Key="AccountToVisibility"/> -->
+                    <!-- <converter:StringToSelectionColor x:Key="StringToSelectionColor"/> -->
+                </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
