--- a/BookOrca/View/MainWindow.xaml
+++ b/BookOrca/View/MainWindow.xaml
@@ -38,11 +38,48 @@
                     Click="OpenSettings">
                 <iconPacks:Material Kind="Cog"/>
             </Button>
+            <Button Height="50"
+                    Width="50"
+                    Margin="10"
+                    Command="{Binding UpdateBooks}">
+                <iconPacks:Material Kind="Update"/>
+            </Button>
+
+            <Border Background="{DynamicResource Background}" 
+                    BorderThickness="1"
+                    BorderBrush="Gray"
+                    Width="150"
+                    Height="40"
+                    Margin="150 0 0 0"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Right"
+                    CornerRadius="10">
+                <Grid>
+                    <TextBlock VerticalAlignment="Center"
+                               FontSize="20"
+                               Text="Titel"
+                               Foreground="LightGray"
+                               Margin="10 0"
+                               Visibility="{Binding Path=BookFilterName, 
+                                            Converter={StaticResource EmptyToVis}}"/>
+                    <TextBox VerticalAlignment="Center"
+                             FontFamily="{DynamicResource CustomFont}"
+                             FontSize="20"
+                             Text="{Binding Path=BookFilterName, 
+                                    UpdateSourceTrigger=PropertyChanged}"
+                             BorderThickness="0"
+                             Background="Transparent"
+                             Margin="4 0" />
+                </Grid>
+            </Border>
+            
         </StackPanel>
 
         <Grid Grid.Row="1">
-            <ListView ItemsSource="{Binding Path=BookList}" 
+            <ListView Name="MainListView"
+                      ItemsSource="{Binding Path=BookList}" 
                       ItemContainerStyle="{StaticResource ListViewContainerStyle}" 
+                      Style="{StaticResource ListViewStyle}"
                       HorizontalContentAlignment="Stretch"
                       VerticalContentAlignment="Stretch"
                       AllowDrop="True"
