änderungen an view
zurück änderungen etc

--- a/BookOrca/Styles/Listviews.xaml
+++ b/BookOrca/Styles/Listviews.xaml
@@ -62,7 +62,7 @@
                 <BeginStoryboard>
                     <Storyboard>
                         <!-- Ändere die Eigenschaften des Hintergrunds -->
-                        <ColorAnimation Storyboard.TargetProperty="(ListView.Background).(SolidColorBrush.Color)"
+                        <ColorAnimation Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)"
                                         To="{StaticResource MahApps.Colors.Gray}" Duration="0:0:0.3" />
                         <!-- Füge hier weitere Animationen hinzu, um andere visuelle Effekte zu erzeugen -->
                     </Storyboard>
@@ -72,8 +72,8 @@
                 <BeginStoryboard>
                     <Storyboard>
                         <!-- Setze die Eigenschaften des Hintergrunds zurück -->
-                        <ColorAnimation Storyboard.TargetProperty="(ListView.Background).(SolidColorBrush.Color)"
-                                        To="White" Duration="0:0:0.3" />
+                        <ColorAnimation Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)"
+                                        To="{StaticResource MahApps.Colors.Gray7}" Duration="0:0:0.3" />
                         <!-- Setze hier weitere Animationen zurück, um andere visuelle Effekte zu entfernen -->
                     </Storyboard>
                 </BeginStoryboard>
