--- a/BookOrca/View/MainWindow.xaml
+++ b/BookOrca/View/MainWindow.xaml
@@ -41,7 +41,7 @@
             <Button Height="50"
                     Width="50"
                     Margin="10"
-                    Command="{Binding UpdateBooks}">
+                    Command="{Binding UpdateBooksCommand}">
                 <iconPacks:Material Kind="Update"/>
             </Button>
 
