--- a/BookOrca/View/MainWindow.xaml
+++ b/BookOrca/View/MainWindow.xaml
@@ -96,7 +96,8 @@
                                    Stretch="UniformToFill" Style="{StaticResource BookImageStyle}"
                                    Cursor="Hand">
                                 <Image.InputBindings>
-                                    <MouseBinding MouseAction="LeftClick" Command="{Binding Path=DataContext.BookClickedCommand, RelativeSource={RelativeSource AncestorType={x:Type ListView}}}" CommandParameter="{Binding}"/>
+                                    <MouseBinding MouseAction="LeftClick" 
+                                                  Command="{Binding Path=OpenBookCommand}" />
                                 </Image.InputBindings>
                             </Image>
                         </Border>
