--- a/BookOrca/Styles/Listviews.xaml
+++ b/BookOrca/Styles/Listviews.xaml
@@ -83,6 +83,18 @@
                     </Storyboard>
                 </BeginStoryboard>
             </EventTrigger>
+            <EventTrigger RoutedEvent="Drop">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <ColorAnimation
+                            Storyboard.TargetProperty="(ListView.Background).(SolidColorBrush.Color)"
+                            To="White" Duration="0:0:0.2" />
+                        <ColorAnimation
+                            Storyboard.TargetProperty="(ListViewItem.Background).(SolidColorBrush.Color)"
+                            To="White" Duration="0:0:0.2" />
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
         </Style.Triggers>
     </Style>
 </ResourceDictionary>
