--- a/BookOrca/App.xaml
+++ b/BookOrca/App.xaml
@@ -6,7 +6,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-
+                <ResourceDictionary Source="/Styles/BookStyle.xaml"/>
+                <ResourceDictionary Source="/Styles/Listviews.xaml"/>
+                
                 <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
