--- a/BookOrca/App.xaml
+++ b/BookOrca/App.xaml
@@ -7,7 +7,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Styles/BookStyle.xaml"/>
-                <ResourceDictionary Source="/Styles/Listviews.xaml"/>
+                <ResourceDictionary Source="/Styles/ListViewStyles.xaml"/>
                 
                 <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
