--- a/BookOrca/View/MainWindow.xaml
+++ b/BookOrca/View/MainWindow.xaml
@@ -10,10 +10,8 @@
                  mc:Ignorable="d"
                  Title="BookOrca"
                  TitleCharacterCasing="Normal"
-                 TitleForeground="Transparent"
-                 BorderThickness="0"
-                 Height="600"
-                 Width="500"
+                 Height="800"
+                 Width="600"
                  d:DataContext="{d:DesignInstance viewModel:MainViewModel}">
     <Grid>
         <Grid.RowDefinitions>
@@ -21,33 +19,32 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0"
-                    Orientation="Horizontal">
-            <Button Height="50"
-                    Width="50"
-                    Margin="10 0 0 0"
-                    Click="OpenSettings">
-                <iconPacks:Material Kind="Cog" />
-            </Button>
-            <Button Height="50"
-                    Width="50"
-                    Margin="10 0 0 0"
-                    Command="{Binding UpdateBooksCommand}">
-                <iconPacks:Material Kind="Update" />
-            </Button>
-
-
-            <TextBox
-                VerticalAlignment="Center"
-                FontSize="20"
-                Width="200"
-                Text="{Binding Path=BookFilter,
+        <Grid Grid.Row="0">
+            <StackPanel Orientation="Horizontal">
+                <Button Height="50"
+                        Width="50"
+                        Margin="10 0 0 0"
+                        Click="OpenSettings">
+                    <iconPacks:Material Kind="Cog" />
+                </Button>
+                <Button Height="50"
+                        Width="50"
+                        Margin="10 0 0 0"
+                        Command="{Binding UpdateBooksCommand}">
+                    <iconPacks:Material Kind="Update" />
+                </Button>
+            </StackPanel>
+            <TextBox VerticalAlignment="Center"
+                     HorizontalAlignment="Right"
+                     FontSize="20"
+                     Width="200"
+                     Text="{Binding Path=BookFilter,
                                     UpdateSourceTrigger=PropertyChanged}"
-                BorderThickness="1"
-                Background="Transparent"
-                Margin="4 0" />
+                     BorderThickness="1"
+                     Background="Transparent"
+                     Margin="10 0" />
+        </Grid>
 
-        </StackPanel>
 
         <Grid Grid.Row="1">
             <ListView Name="MainListView"
